syntax = "proto3";

package identity.v1;

import "cosmos/orm/v1/orm.proto";
import "common/v1/base.proto";
import "common/v1/enums.proto";

option go_package = "github.com/didao-org/sonr/x/identity/types";

// BlockchainAccount is the root sonr account table which contains all sub-identities.
message BlockchainAccount {
  option (cosmos.orm.v1.table) = {
    id : 1
    primary_key : {fields : "sequence" auto_increment : true}
    index : {id : 1 fields : "address" unique : true}
    index : {id : 2 fields : "public_key" unique : true}
  };

  uint64 sequence = 1;
  string controller = 2;
  bytes public_key = 4;
  string network = 5;
  string address = 6;
  string chain_id = 7;
}


// IdentityController is the root sonr controller table which contains all sub-identities.
message IdentityController {
  option (cosmos.orm.v1.table) = {
    id: 2
    primary_key : {fields : "sequence" auto_increment : true}
    index : {id : 1 fields : "address" unique : true}
    index : {id : 2 fields : "public_key" unique : true}
    index : {id : 3 fields : "peer_id" unique : true}
    index : {id : 4 fields : "ipns" unique : true}
  };

  uint64 sequence = 1;
  string peer_id = 2;
  string address = 3;
  bytes public_key = 4;
  string ipns = 5;
  bytes accumulator_key = 6;
  string network = 7;
  string chain_id = 8;
}

// TokenBalance is the root sonr token balance table which contains all sub-identities.
message TokenBalance {
  option (cosmos.orm.v1.table) = {
    id : 4
    primary_key : {fields : "address"}
  };
  string address = 1;
  uint64 amount = 2;
  string denom = 3;
  common.v1.TokenKind kind = 4;
  string blockchain = 5;
  string chain_id = 6;
}

// UserIdentifier is the root sonr user identifier table which contains all sub-identities.
message UserIdentifier {
  option (cosmos.orm.v1.table) = {
    id : 4
    primary_key : {fields : "sequence" auto_increment : true}
  };

  uint64 sequence = 1;
  string hash_value = 2;
  string zk_witness = 3;
  common.v1.IdentifierKind kind = 4;
}
